# asset-label-calc-CIP-67

./: README.md  asset-label-implementation.cabal
app/: Main.hs
