cabal-version:      2.4
name:               asset-label-implementation
version:            0.1.0.0

author:             perturbing
maintainer:         thomas.vellekoop@iohk.io

executable asset-label-implementation
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , binary
                    , crc
                    , bits-bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
